# cv-confidencial

./: .gitignore  README.md  jest.config.js  jest.config.ts  package-lock.json  package.json  requirements.txt  serverless.ts  serverless.yml  tsconfig.json
fileService/: .gitignore  handler.js  uploadService.js
fileService/src/: fileService.ts  handler.ts  uploadService.ts
lib/: serverless.js  serverless.js.map
lib/src/libs/pdf_manager/: pdf_manager.js  pdf_manager.js.map
lib/tests/: pdf.test.js  pdf.test.js.map
pdfparse/: package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
pdfparse/pdfparse/: getPdfText.py  handler.py
pdfparse/tests/: test_pdfparse.py
src/libs/pdf_manager/: pdf_manager.ts
tests/: pdf.test.ts
